--- a/ConsoleDNVReader/ConsoleDNVReader.csproj
+++ b/ConsoleDNVReader/ConsoleDNVReader.csproj
@@ -5,7 +5,12 @@
     <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <ApplicationIcon>icon_dnv_.net10.ico</ApplicationIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="icon_dnv_.net10.ico" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\AdvancedDNV\AdvancedDNV.csproj" />
