--- a/.gitignore
+++ b/.gitignore
@@ -363,3 +363,5 @@ MigrationBackup/
 FodyWeavers.xsd
 /AdvancedDNV/discordVideo.dnv
 /AdvancedDNV/update.dnv
+/AdvancedDNV/update.dnv
+/AdvancedDNV/discordVideo.dnv
